--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="pt-br">
 
 <head>
+  <!-- Meta Settings -->
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="public/assets/img/favicon.png">
+  <meta name="author" content="Gustavo Rodrigues">
+  <meta property="og:description" content="Acesse meu portfólio e conheça meus projetos!">
+  <meta property="og:url" content="https://guhrodrigues.vercel.app">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Title -->
   <title>Gustavo Rodrigues • Portfólio</title>
+  <!-- Links -->
+  <link rel="shortcut icon" href="public/assets/img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
