--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://guhrodrigues.vercel.app">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Title -->
-  <title>Gustavo Rodrigues • Portfólio</title>
+  <title>Gustavo Rodrigues &mdash; Portfólio</title>
   <!-- Links -->
   <link rel="shortcut icon" href="public/assets/img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
