--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="shortcut icon" href="public/assets/img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-backgroundPrimaryLight dark:bg-backgroundPrimaryDark">
   <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
