Adicionando projeto Weather

--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <!-- Meta Settings -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Gustavo Rodrigues" />
+    <meta property="og:title" content="Gustavo Rodrigues | Portfólio" />
+    <meta
+      property="og:description"
+      content="Acesse meu portfólio e conheça meus projetos"
+    />
+    <meta
+      property="og:image"
+      content="https://imgbox.com/D3aEz2Dq"
+    />
+    <meta property="og:url" content="https://guhrodrigues.vercel.app" />
+    <!-- Title -->
+    <title>Gustavo Rodrigues &mdash; Portfólio</title>
+    <!-- Links -->
+    <link rel="shortcut icon" href="public/assets/img/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <!-- Meta Settings -->
-  <meta charset="UTF-8" />
-  <meta name="author" content="Gustavo Rodrigues">
-  <meta property="og:description" content="Acesse meu portfólio e conheça meus projetos!">
-  <meta property="og:url" content="https://guhrodrigues.vercel.app">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Title -->
-  <title>Gustavo Rodrigues &mdash; Portfólio</title>
-  <!-- Links -->
-  <link rel="shortcut icon" href="public/assets/img/favicon.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-</head>
-
-<body class="bg-backgroundPrimaryLight dark:bg-backgroundPrimaryDark">
-  <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-</body>
-
+  <body class="bg-backgroundPrimaryLight dark:bg-backgroundPrimaryDark">
+    <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  </body>
 </html>
