--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://imgbox.com/D3aEz2Dq"
+      content="https://i.imgur.com/ZFGxfG5.jpeg"
     />
     <meta property="og:url" content="https://guhrodrigues.vercel.app" />
     <!-- Title -->
