--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Gustavo Rodrigues | Portfólio" />
     <meta
       property="og:description"
-      content="Acesse meu portfólio e conheça meus projetos"
+      content="Acesse meu portfólio e conheça meus projetos."
     />
     <meta
       property="og:image"
