--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
   </head>
 
-  <body class="bg-backgroundPrimaryDark">
+  <body class="bg-background">
     <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
