--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       property="og:description"
       content="Acesse meu portfólio e conheça meus projetos."
     />
-    <meta
-      property="og:image"
-      content="https://i.imgur.com/ZFGxfG5.jpeg"
-    />
+    <meta property="og:image" content="https://i.imgur.com/ZFGxfG5.jpeg" />
     <meta property="og:url" content="https://guhrodrigues.vercel.app" />
     <!-- Title -->
     <title>Gustavo Rodrigues &mdash; Portfólio</title>
@@ -32,7 +29,7 @@
     />
   </head>
 
-  <body class="bg-background" style="-webkit-tap-highlight-color: transparent;">
+  <body style="-webkit-tap-highlight-color: transparent">
     <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
