--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       property="og:description"
       content="Acesse meu portfólio e conheça meus projetos."
     />
-    <meta property="og:image" content="https://i.imgur.com/ZFGxfG5.jpeg" />
+    <meta property="og:image" content="https://i.imgur.com/x1yZFvO.jpg" />
     <meta property="og:url" content="https://guhrodrigues.vercel.app" />
     <!-- Title -->
     <title>Gustavo Rodrigues &mdash; Portfólio</title>
@@ -21,10 +21,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
   </head>
