--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Gustavo Rodrigues" />
-        <meta property="og:title" content="Gustavo Rodrigues | Portfólio" />
+        <meta property="og:title" content="Gustavo Rodrigues — Portfólio" />
         <meta
             property="og:description"
             content="Acesse meu portfólio e conheça meus projetos."
         />
-        <meta property="og:image" content="https://i.imgur.com/x1yZFvO.jpg" />
+        <meta property="og:image" content="https://i.imgur.com/nbcqelx.png" />
         <meta property="og:url" content="https://guhrodrigues.vercel.app" />
         <!-- Title -->
         <title>Gustavo Rodrigues &mdash; Portfólio</title>
