feat: Adding TypeScript and import aliases

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Title -->
         <title>Gustavo Rodrigues &mdash; Portfólio</title>
         <!-- Links -->
-        <link rel="shortcut icon" href="public/assets/img/favicon.png" />
+        <link rel="shortcut icon" href="public/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -31,7 +31,7 @@
     <body style="-webkit-tap-highlight-color: transparent">
         <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
         <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
+        <script type="module" src="/src/main.tsx"></script>
         <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     </body>
 </html>
