perf: Making code more performant

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <meta name="author" content="Gustavo Rodrigues" />
+        <meta
+            name="description"
+            content="Desenvolvedor Web · Estudante de T.I · Entusiasta da tecnologia"
+        />
         <meta
             property="og:title"
             content="Gustavo Rodrigues — Desenvolvedor Web"
@@ -16,14 +21,18 @@
         />
         <meta property="og:image" content="https://i.imgur.com/KGuh95A.png" />
         <meta property="og:url" content="https://guhrodrigues.vercel.app" />
+
         <!-- Title -->
-        <title>Gustavo Rodrigues &mdash; Portfólio</title>
-        <!-- Links -->
+        <title>Gustavo Rodrigues · Portfólio</title>
+
+        <!-- Favicon -->
         <link rel="shortcut icon" href="public/favicon.png" />
+
+        <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
             rel="stylesheet"
         />
     </head>
