style: changing styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta property="og:url" content="https://guhrodrigues.vercel.app" />
 
         <!-- Title -->
-        <title>Gustavo Rodrigues · Portfólio</title>
+        <title>Gustavo Rodrigues — Portfólio</title>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="public/favicon.png" />
