feat: adding new personal logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <title>Gustavo Rodrigues — Portfólio</title>
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="public/favicon.png" />
+        <link rel="shortcut icon" href="public/favicon.svg" />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
