feat: updating meta image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             property="og:description"
             content="Desenvolvedor Web · Estudante de T.I · Entusiasta da tecnologia"
         />
-        <meta property="og:image" content="https://i.imgur.com/KGuh95A.png" />
+        <meta property="og:image" content="https://i.imgur.com/yabnBkm.png" />
         <meta property="og:url" content="https://guhrodrigues.vercel.app" />
 
         <!-- Title -->
