--- a/index.html
+++ b/index.html
@@ -1,45 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-    <head>
-        <!-- Meta Settings -->
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <!-- Meta Settings -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <meta name="author" content="Gustavo Rodrigues" />
-        <meta
-            name="description"
-            content="Desenvolvedor Web · Estudante de T.I · Entusiasta da tecnologia"
-        />
-        <meta
-            property="og:title"
-            content="Gustavo Rodrigues — Desenvolvedor Web"
-        />
-        <meta
-            property="og:description"
-            content="Desenvolvedor Web · Estudante de T.I · Entusiasta da tecnologia"
-        />
-        <meta property="og:image" content="https://i.imgur.com/3KqVuYV.png" />
-        <meta property="og:url" content="https://guhrodrigues.vercel.app" />
+    <meta name="author" content="Gustavo Rodrigues" />
+    <meta
+      name="description"
+      content="Desenvolvedor Web · Estudante de T.I · Fanático pela criação de interfaces"
+    />
+    <meta property="og:title" content="Gustavo Rodrigues" />
+    <meta
+      property="og:description"
+      content="Desenvolvedor Web · Estudante de T.I · Fanático pela criação de interfaces"
+    />
+    <meta property="og:image" content="https://i.imgur.com/3KqVuYV.png" />
+    <meta property="og:url" content="https://guhrodrigues.vercel.app" />
 
-        <!-- Title -->
-        <title>Portfólio · Gustavo Rodrigues</title>
+    <!-- Title -->
+    <title>Gustavo Rodrigues</title>
 
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="public/favicon.svg" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="public/favicon.svg" />
 
-        <!-- Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
-            rel="stylesheet"
-        />
-    </head>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <body style="-webkit-tap-highlight-color: transparent">
-        <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
-        <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
-    </body>
+  <body style="-webkit-tap-highlight-color: transparent">
+    <noscript>Habilite o JavaScript para rodar essa aplicação.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
