feat: Updating meta settinh

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="Desenvolvedor Web · Estudante de T.I · Fanático pela criação de interfaces"
     />
     <meta property="og:image" content="https://i.imgur.com/3KqVuYV.png" />
-    <meta property="og:url" content="https://guhrodrigues.vercel.app" />
+    <meta property="og:url" content="https://guhrodrigues.com" />
 
     <!-- Title -->
     <title>Gustavo Rodrigues</title>
